# sandbox-rust-axum

./: Cargo.toml
src/: main.rs  state.rs
src/users/: domains.rs  handlers.rs  mod.rs  routing.rs  views.rs
templates/: list_users.hbs  new_user.hbs
