[package]
name = "sandbox-rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
chrono = "0.4.38"
handlebars = "5.1.2"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
